--- a/Styles/TextBlockStyles.xaml
+++ b/Styles/TextBlockStyles.xaml
@@ -5,15 +5,29 @@
         <Style.Setters>
             <Setter Property="FontFamily" Value="{DynamicResource Magic}"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="{StaticResource OverflowBrush}"/> 
+            <Setter Property="Foreground" Value="Black"/> 
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
     </Style>
 
+    <Style x:Key="SideMenuTitleTextBlock" TargetType="TextBlock">
+        <Style.Setters>
+            <Setter Property="Foreground" Value="{StaticResource DarkTextBrush}"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="15,10,0,0"/>
+            <Setter Property="FontSize" Value="26"/>
+            <Setter Property="FontStretch" Value="UltraExpanded"/>
+            <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
+            <Setter Property="Effect" Value="{StaticResource BigTextShadow}"/>
+        </Style.Setters>
+    </Style>
+    
     <Style x:Key="TitleTextBlock" TargetType="TextBlock">
         <Style.Setters>
             <Setter Property="FontFamily" Value="{StaticResource NierAutomata}"/>
+            <Setter Property="Foreground" Value="{StaticResource DarkTextBrush}"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -24,11 +38,12 @@
     <Style x:Key="BasicTextBlock" TargetType="TextBlock">
         <Style.Setters>
             <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
+            <Setter Property="Padding" Value="2"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="TextWrapping" Value="NoWrap"/>
         </Style.Setters>
     </Style>
     
